# misis-cjsc-purple-hack-2024

./: README.md  compose.yaml
backend/: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
backend/init/: db.sql
backend/src/cjsc_backend/: config.py  main.py
backend/src/cjsc_backend/connectors/: ml.py
backend/src/cjsc_backend/database/: connect.py
backend/src/cjsc_backend/database/tables/: chat_sessions.py  messages.py  users.py
backend/src/cjsc_backend/models/: user.py
backend/src/cjsc_backend/routers/http/: auth.py  debug.py  messages.py  root.py
backend/src/cjsc_backend/routers/http/schemas/: chat_session.py  message.py  token.py  user.py
backend/src/cjsc_backend/routers/utils/: user_auth_schemas.py
backend/src/cjsc_backend/routers/ws/: messages.py
backend/src/cjsc_backend/setup/: cors.py  webserver_port.py
backend/tests/local/: ml_send_msg.py  ws-gen.py  ws-gen_all-async.py  ws-gen_all-sync.py  ws-gen_all.py
frontend/: .eslintrc.cjs  Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: global.d.ts
frontend/src/api/endpoints/: auth.endpoint.ts  message.endpoint.ts
frontend/src/api/models/: auth.model.ts  chat.model.ts  document.model.ts  message.model.ts  socket.model.ts
frontend/src/api/utils/: api.ts
frontend/src/app/: app.tsx  globals.css
frontend/src/assets/fonts/stem/: Stem-ExtraLight.eot  Stem-Medium.eot  Stem-Regular.eot  Stem-SemiLight.eot  Stem-Thin.eot  stylesheet.css
frontend/src/components/Sidebar/: Sidebar.tsx
frontend/src/components/hoc/: PrivateRoute.tsx
frontend/src/components/pages/Chat/sections/: Chat.tsx  ChatList.tsx  MobileRecommendations.tsx  Page.tsx  Recommendations.tsx
frontend/src/components/pages/Chat/widgets/: ChatCard.tsx  (+2 more)
frontend/src/components/pages/Login/: LoginPage.tsx
frontend/src/components/ui/: drawer.tsx
frontend/src/components/ui/Checkmark/: Checkmark.tsx  style.module.css
frontend/src/components/ui/loaders/: LoadingEllipsis.module.css  LoadingEllipsis.tsx  LoadingWrapper.tsx
frontend/src/hooks/: useMediaQuery.ts
frontend/src/lib/: utils.ts
frontend/src/routes/: __root.tsx  index.lazy.tsx  login.lazy.tsx
frontend/src/stores/: auth.service.ts  chat.vm.ts  io.service.ts
ml/: .gitignore  README.md  compose.yaml  pyproject.toml
ml-queue/: .dockerignore  compose.yaml  pyproject.toml
ml-queue/src/cjsc_ml_queue/: main.py  models.py
ml-queue/tests/local/: query_ml.py
ml/src/cjsc_ml/: clickhouse.py  config.py  main.py  models.py  utils.py
parsing/: main.py  parse_faq.py  parse_pdf.py  parse_pdf_2.py
