[tool.poetry]
name = "misis-cjsc-purple-hack-2024-ml"
packages = [{include = "cjsc_ml", from="src"}]
version = "0.0.1"
description = ""
authors = ["0xb1b1 <hello@axelreitenbach.online>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.1"
numpy = "^1.26.4"
pandas = "^2.2.1"
transformers = "^4.38.2"
datasets = "^2.18.0"
accelerate = "^0.28.0"
peft = "^0.9.0"
seaborn = "^0.13.2"
matplotlib = "^3.8.3"
jupyterlab = "^4.1.4"
selenium = "^4.18.1"
bs4 = "^0.0.2"
tqdm = "^4.66.2"
tika = "^2.6.0"
webdriver-manager = "^4.0.1"
textract = "^1.6.5"
scikit-learn = "^1.4.1.post1"
madgrad = "^1.3"
redis = "^5.0.3"
asyncio = "^3.4.3"
python-socketio = "^5.11.1"
sentencepiece = "^0.2.0"
clickhouse-driver = "^0.2.7"

[tool.poetry.scripts]
start = "cjsc_ml.main:run"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
